<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    app:cardCornerRadius="8dp"
    android:elevation="@dimen/card_elevation"
    android:id="@+id/vertical_feed_card_item">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/top_layout_vertical_feed_item">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/pic"
                android:background="@drawable/profile_pic_background"
                android:padding="2dp"
                android:id="@+id/dp_vertical_feed_item"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ciptasmara"
                android:textColor="#000"
                android:layout_toRightOf="@+id/dp_vertical_feed_item"
                android:layout_marginLeft="10dp"
                android:textSize="16sp"
                android:id="@+id/name__vertical_feed_item"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/open_sans"
                android:textStyle="bold"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name__vertical_feed_item"
                android:layout_toRightOf="@+id/dp_vertical_feed_item"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                >
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="25dp"
                    android:src="@drawable/placeholder"
                    android:id="@+id/placeholder_vertical_feed_item"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/at_starbucks"
                    android:layout_toRightOf="@+id/placeholder_vertical_feed_item"
                    android:textSize="13sp"
                    android:layout_marginLeft="3dp"
                    android:fontFamily="@font/open_sans"/>


            </RelativeLayout>

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:rating="5"
                android:isIndicator="true"
                android:id="@+id/rating_bar_vertical_feed_item"/>

        </RelativeLayout>
        <com.makeramen.roundedimageview.RoundedImageView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:scaleType="fitXY"
            android:src="@drawable/food_image_vertical_feed_recycler"
            android:layout_below="@+id/top_layout_vertical_feed_item"
            android:layout_marginTop="15dp"
            android:id="@+id/food_image_vertical_feed_item"
            app:riv_corner_radius="15dp"
            />



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/food_image_vertical_feed_item"
            android:id="@+id/bottom_layout_vertical_feed_item"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donuts"
                android:textColor="#000"
                android:id="@+id/donuts_text_vertical_feed_item"
                android:textSize="16sp"
                android:textStyle="bold"
                android:fontFamily="@font/open_sans"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nice_good"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/donuts_text_vertical_feed_item"
                android:id="@+id/nice_good_vertical_feed_item"
                android:textSize="13sp"
                android:fontFamily="@font/open_sans"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="5 months ago"
                android:id="@+id/_vertical_feed_item"
                android:layout_alignParentRight="true"
                android:textSize="13sp"
                android:fontFamily="@font/open_sans"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/collection_delivery"
                android:layout_marginTop="10dp"
                android:textColor="#000"
                android:layout_below="@+id/donuts_text_vertical_feed_item"
                android:id="@+id/collection_delivery_text_vertical_feed_item"
                android:layout_toLeftOf="@+id/today_text_vertical_feed_item"
                android:textSize="13sp"
                android:fontFamily="@font/open_sans"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:layout_marginTop="10dp"
                android:textColor="#000"
                android:layout_below="@+id/donuts_text_vertical_feed_item"
                android:id="@+id/today_text_vertical_feed_item"
                android:layout_alignParentRight="true"
                android:textSize="13sp"
                android:fontFamily="@font/open_sans"/>



        </RelativeLayout>

    </RelativeLayout>



</android.support.v7.widget.CardView>