<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="20dp"
    android:layout_marginBottom="5dp"
    app:cardElevation="@dimen/card_elevation"
    app:cardCornerRadius="5dp">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        >

        <ImageView
            android:id="@+id/notifications_recycler_item_image"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="fitXY"
            android:src="@drawable/notifications_image"

            />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/notifications_recycler_item_image"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true">
            <LinearLayout
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/notifications_recycler_item_nameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/carry"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/notifications_recycler_item_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/notifications_recycler_item_image"
                    android:fontFamily="@font/open_sans"
                    android:text="@string/liked_your_rave"
                    android:textSize="16sp" />
            </LinearLayout>


            <TextView
                android:id="@+id/notifications_recycler_item_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/open_sans"
                android:text="@string/_5_months_ago"
                android:textColor="@color/app_gray"
                android:textSize="14sp"

                />
        </RelativeLayout>

    </RelativeLayout>


</android.support.v7.widget.CardView>